--- a/COMP2007-Assign1-ASPNet-Portfolio/Contact.Master
+++ b/COMP2007-Assign1-ASPNet-Portfolio/Contact.Master
@@ -10,8 +10,8 @@
     <title></title>
     <!-- CSS Section -->
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/app.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li id="home" runat="server"><a href="Default.aspx"><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li id="about" runat="server"><a href="About.aspx"><i class="fa fa-info fa-lg"></i> About</a></li>
-                    <li id="prodects" runat="server"><a href="Projects.aspx"><i class="fa fa-th fa-lg"></i> Projects</a></li>
+                    <li id="projects" runat="server"><a href="Projects.aspx"><i class="fa fa-th fa-lg"></i> Projects</a></li>
                     <li id="services" runat="server"><a href="Services.aspx"><i class="fa fa-gear fa-lg"></i> Services</a></li>          
                     <li id="contact" runat="server"><a href="Contact.aspx"><i class="fa fa-phone fa-lg"></i> Contact</a></li>
                 </ul>
