--- a/COMP2007-Assign1-ASPNet-Portfolio/Content/app.css
+++ b/COMP2007-Assign1-ASPNet-Portfolio/Content/app.css
@@ -1,16 +1,34 @@
 ﻿/* custom styles live here */
+
+/*Footer Section*/
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
-    background-color: #f5f5f5;
+    background-color: #10EDFF;
+    color:white;
 }
 
-.container .text-muted {
-    margin: 20px 0;
+footer p {
+    padding-top: 10px;   
 }
 
-.text-muted {
-    color: #777;
+footer ul.social-links {
+    padding-left: 0;
+    margin-bottom: 10px;
+    color: floralwhite;
+}
+ul.social-links {
+    padding-top: 5px;
+}
+
+ul.social-links li {
+    display: inline-block;
+    list-style-type: none;
+    margin: 5px;
+}
+
+.social-links a {
+    color:white;
 }
