--- a/COMP2007-Assign1-ASPNet-Portfolio/Site.Master
+++ b/COMP2007-Assign1-ASPNet-Portfolio/Site.Master
@@ -10,8 +10,8 @@
     <title></title>
     <!-- CSS Section -->
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/app.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -35,7 +35,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li id="home" runat="server"><a href="Default.aspx"><i class="fa fa-home fa-lg"></i> Home</a></li>
                         <li id="about" runat="server"><a href="About.aspx"><i class="fa fa-info fa-lg"></i> About</a></li>
-                        <li id="prodects" runat="server"><a href="Projects.aspx"><i class="fa fa-th fa-lg"></i> Projects</a></li>
+                        <li id="projects" runat="server"><a href="Projects.aspx"><i class="fa fa-th fa-lg"></i> Projects</a></li>
                         <li id="services" runat="server"><a href="Services.aspx"><i class="fa fa-gear fa-lg"></i> Services</a></li>
                         <li id="contact" runat="server"><a href="Contact.aspx"><i class="fa fa-phone fa-lg"></i> Contact</a></li>
                     </ul>
@@ -50,8 +50,31 @@
         </div>
     </form>
     <footer class="footer">
-        <div class="container">
-            <p class="text-muted">Footer Content here</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-xs-12 text-center">
+                    <p>&copy; 2015 Fei Wang</p>
+                </div>
+                <div class="col-md-6 col-xs-12 text-center">
+                    <ul class="social-links">
+                        <li>
+                            <a title="Github Profile" href="https://github.com/kingnot"><i class="fa fa-github-square fa-2x"></i></a>
+                        </li>
+                        <li>
+                            <a title="Twitter profile" href="https://twitter.com/kingnotwang"><i class="fa fa-twitter-square fa-2x"></i></a>
+                        </li>
+                        <li>
+                            <a title="Linkedin Profile" href="https://ca.linkedin.com/pub/fei-wang/25/46a/b7"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                        </li>
+                        <li>
+                            <a title="Facebook profile" href="https://www.facebook.com/fei.wang.399041"><i class="fa fa-facebook-square fa-2x"></i></a>
+                        </li>
+                        <li>
+                            <a title="Google plus profile" href="https://plus.google.com/u/0/115658161379621489266/posts/p/pub"><i class="fa fa-google-plus-square fa-2x"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- JavaScript Section -->
