--- a/COMP2007-Assign1-ASPNet-Portfolio/Contact.Master
+++ b/COMP2007-Assign1-ASPNet-Portfolio/Contact.Master
@@ -1,4 +1,12 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Contact.master.cs" Inherits="COMP2007_Assign1_ASPNet_Portfolio.Contact" %>
+﻿<%--
+ File Name: Contact.aspx
+ Author's Name: Fei Wang
+ Date: May 29, 2016
+ Website Name: ASP.NET Web Forms Portfolio Site
+ Description: This is the Master Page for Contact page
+--%>
+
+<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Contact.master.cs" Inherits="COMP2007_Assign1_ASPNet_Portfolio.Contact" %>
 
 <!DOCTYPE html>
 
