--- a/COMP2007-Assign1-ASPNet-Portfolio/Content/app.css
+++ b/COMP2007-Assign1-ASPNet-Portfolio/Content/app.css
@@ -1,13 +1,65 @@
 ﻿/* custom styles live here */
 
+body {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
+a {
+  color: #00B7FF;
+}
+
+div.container p {
+    margin-top: 15px;
+    font-size: 18px;
+}
+
+div.container h1 {
+    padding-bottom: 20px;
+}
+
+h2.blog-post-title {
+    font-size: 25px;
+}
+
+.panel-info {
+    color: #2E6DA4;
+}
+
+/*Cover Section*/
+div.cover {
+    height: 650px;
+    background: url(../Assets/Fei_Wang_Cover.jpg) no-repeat center center fixed;
+    background-size: cover;
+    padding-top: 100px;
+    margin-bottom: 15px;
+}
+
+div.cover p {
+    margin-top: 35px;
+    font-size: 18px;
+} 
+
+div.cover p.lead {
+    margin-top: 50px;
+    font-size: 23px;
+}
+
+
+/*Contact Form Section*/
+.contact-form {
+    text-align:left;
+}
+
+
 /*Footer Section*/
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 60px;
-    background-color: #10EDFF;
-    color:white;
+    background-color: black;
+    color:#9d9d9d;
 }
 
 footer p {
